Add  RegisterTest